	* src/gui/inventorywindow.cpp, src/gui/itemcontainer.cpp: Fixed key
	special values.
	* src/gui/itemcontainer.cpp: Reduced amount of spurious item
	deselections.
	* src/gui/itemcontainer.cpp, src/gui/itemcontainer.h: Allowed dragging
	of already selected items.
	* src/gui/buy.cpp, src/gui/sell.cpp, po/POTFILES.in: Marked buy and
	sell dialog boxes as translatable.

2007-10-19  Philipp Sehmisch <tmw@crushnet.org>

	* src/gui/truetypefont.cpp: Increased text chunk cache size to improve
	performance when a lot of text is on the screen.

2007-10-18  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* src/beingmanager.h, src/beingmanager.cpp, src/net/beinghandler.cpp:
	Removed guess of being type from class number. Factored handler for new
	beings.
	* src/gui/truetypefont.cpp: Fixed double-free of true-type resources.
	* src/monster.cpp: Removed compatibility hack.
	* data/monsters.xml: Merged client and server monster data.
	* data/items.xml: Merged server item data. Removed obsolete fields.
	* src/localplayer.cpp, src/localplayer.h: Moved equipment and inventory
	storage to local player. Removed specific type.
	* src/gui/viewport.cpp, src/gui/minimap.cpp: Changed identification of
	local player to a check of player_node.
	* src/animatedsprite.cpp, src/animatedsprite.h, src/npc.cpp,
	src/player.cpp, src/monster.cpp, src/resources/resourcemanager.cpp:
	Prevented client from exiting on missing sprites.
	* src/being.cpp, src/being.h, src/player.h, src/net/beinghandler.cpp,
	src/net/charserverhandler.cpp: Removed hair style, hair color, gender,
	and equipment from generic being.
	* src/resources/spritedef.cpp: Added filename to fatal error messages.
	* src/resources/iteminfo.cpp, src/resources/iteminfo.h,
	src/resources/itemdb.cpp, data/items.xml: Merged weapon_type and
	attacktype field.
	* src/resources/iteminfo.h, src/resources/itemdb.cpp: Removed unused
	slot field.
	* src/resources/itemdb.cpp: Added automatic generation of description
	strings for item effects.